results/SpecGenBench/conversational/log-TransposeMatrix-2023_11_29_16_32_12.txt
public class TransposeMatrix {
 
       //@ requires matrix != null;
       //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i] != null);
       //@ requires (\forall int i, j; 0 <= i && i < matrix.length && 0 <= j && j < matrix[i].length; (int)Integer.MIN_VALUE <= matrix[i][j] && matrix[i][j] <= (int)Integer.MAX_VALUE);
       //@ ensures \result != null;
       //@ ensures (\forall int i; 0 <= i && i < \result.length; \result[i] != null);
       //@ ensures (\forall int i, j; 0 <= i && i < \result.length && 0 <= j && j < \result[i].length; \result[i][j] == matrix[j][i]);
       public int[][] transposeMat(int[][] matrix)
       {
          int m, n, p, q;
          m = matrix.length;
          n = matrix[0].length;
          int[][] transpose = new int[n][m];

          //@ maintaining 0 <= c && c <= n;
          //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < m; transpose[j][i] == matrix[i][j]);
          //@ decreases n - c;
          for (int c = 0; c < n; c++) {

              //@ maintaining 0 <= d && d <= m;
              //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < d; transpose[j][i] == matrix[i][j]);
              //@ decreases m - d;
              for (int d = 0; d < m; d++) {
                  transpose[c][d] = matrix[d][c];
              }

          }
          return transpose;
       }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:25: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                  transpose[c][d] = matrix[d][c];
                            ^
  Reason: Double rewriting of ident: c c_998_998___29 c_998_1012___35
1 error

public class TransposeMatrix {
 
       //@ requires matrix != null;
       //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i] != null);
       //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i].length == matrix[0].length);
       //@ requires (\forall int i, j; 0 <= i && i < matrix.length && 0 <= j && j < matrix[i].length; (int)Integer.MIN_VALUE <= matrix[i][j] && matrix[i][j] <= (int)Integer.MAX_VALUE);
       //@ ensures \result != null;
       //@ ensures \result.length == matrix[0].length;
       //@ ensures (\forall int i; 0 <= i && i < \result.length; \result[i] != null);
       //@ ensures (\forall int i, j; 0 <= i && i < \result.length && 0 <= j && j < \result[i].length; \result[i][j] == matrix[j][i]);
       public int[][] transposeMat(int[][] matrix)
       {
          int m, n, p, q;
          m = matrix.length;
          n = matrix[0].length;
          int[][] transpose = new int[n][m];

          //@ maintaining 0 <= c && c <= n;
          //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < m; transpose[j][i] == matrix[i][j]);
          //@ decreases n - c;
          for (int c = 0; c < n; c++) {

              //@ maintaining 0 <= d && d <= m;
              //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < d; transpose[j][i] == matrix[i][j]);
              //@ decreases m - d;
              for (int d = 0; d < m; d++) {
                  transpose[c][d] = matrix[d][c];
              }

          }
          return transpose;
       }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:27: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                  transpose[c][d] = matrix[d][c];
                            ^
  Reason: Double rewriting of ident: c c_1157_1157___29 c_1157_1171___35
1 error

public class TransposeMatrix {
 
       //@ requires matrix != null;
       //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i] != null);
       //@ requires (\forall int i; 0 <= i && i < matrix.length; matrix[i].length == matrix[0].length);
       //@ requires (\forall int i, j; 0 <= i && i < matrix.length && 0 <= j && j < matrix[i].length; (int)Integer.MIN_VALUE <= matrix[i][j] && matrix[i][j] <= (int)Integer.MAX_VALUE);
       //@ ensures \result != null;
       //@ ensures \result.length == matrix[0].length;
       //@ ensures (\forall int i; 0 <= i && i < \result.length; \result[i] != null);
       //@ ensures (\forall int i, j; 0 <= i && i < \result.length && 0 <= j && j < \result[i].length; \result[i][j] == matrix[j][i]);
       public int[][] transposeMat(int[][] matrix)
       {
          int m, n, p, q;
          m = matrix.length;
          n = matrix[0].length;
          int[][] transpose = new int[n][m];

          //@ maintaining 0 <= c && c <= n;
          //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < m; transpose[j][i] == matrix[i][j]);
          //@ decreases n - c;
          for (int c = 0; c < n; c++) {

              //@ maintaining 0 <= d && d <= m;
              //@ maintaining (\forall int i, j; 0 <= i && i < c && 0 <= j && j < d; transpose[j][i] == matrix[i][j]);
              //@ decreases m - d;
              for (int d = 0; d < m; d++) {
                  transpose[c][d] = matrix[d][c];
              }

          }
          return transpose;
       }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:27: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                  transpose[c][d] = matrix[d][c];
                            ^
  Reason: Double rewriting of ident: c c_1157_1157___29 c_1157_1171___35
1 error

